# PEPL

./: Cargo.toml  README.md  ROADMAP.md
crates/pepl-codegen/: Cargo.toml  README.md
crates/pepl-codegen/src/: compiler.rs  error.rs  expr.rs  gas.rs  lib.rs  runtime.rs  source_map.rs  space.rs  stmt.rs  test_codegen.rs  types.rs
crates/pepl-codegen/tests/: codegen_tests.rs  test_codegen_tests.rs
crates/pepl-compiler/: Cargo.toml  README.md
crates/pepl-compiler/src/: checker.rs  env.rs  lib.rs  reference.rs  stdlib.rs  ty.rs
crates/pepl-compiler/tests/: determinism_parity_tests.rs  error_code_coverage_tests.rs  invariant_checker_tests.rs  m2_gate_tests.rs  pipeline_tests.rs  type_checker_tests.rs
crates/pepl-eval/: Cargo.toml  README.md
crates/pepl-eval/src/: env.rs  error.rs  evaluator.rs  lib.rs  space.rs  test_runner.rs
crates/pepl-eval/tests/: canonical_tests.rs  eval_tests.rs
crates/pepl-lexer/: Cargo.toml  README.md
crates/pepl-lexer/src/: lexer.rs  lib.rs  token.rs
crates/pepl-lexer/tests/: lexer_tests.rs
crates/pepl-parser/: Cargo.toml  README.md
crates/pepl-parser/src/: lib.rs  parse_decl.rs  parse_expr.rs  parse_stmt.rs  parse_type.rs  parse_ui.rs  parser.rs
crates/pepl-parser/tests/: edge_case_tests.rs  parser_tests.rs
crates/pepl-types/: Cargo.toml  README.md
crates/pepl-types/src/: ast.rs  ast_diff.rs  error.rs  lib.rs  span.rs
crates/pepl-wasm/: Cargo.toml  README.md
crates/pepl-wasm/src/: lib.rs
