[workspace]
resolver = "2"
members = [
    "crates/pepl-compiler",
    "crates/pepl-codegen",
    "crates/pepl-eval",
    "crates/pepl-lexer",
    "crates/pepl-parser",
    "crates/pepl-types",
    "crates/pepl-wasm",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/pepl-lang/pepl"
authors = ["PEPL Team"]

[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
