[package]
name = "pepl-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "PEPL WASM code generator: verified AST to .wasm binary"

[dependencies]
pepl-types = { version = "0.1.1", path = "../pepl-types" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror.workspace = true
wasm-encoder = "0.225"
wasmparser = "0.225"

[dev-dependencies]
pepl-lexer = { version = "0.1.1", path = "../pepl-lexer" }
pepl-parser = { version = "0.1.1", path = "../pepl-parser" }
wasmparser = "0.225"
wasmi = "0.42"
