[package]
name = "pepl-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PEPL compiler: orchestrates the full compilation pipeline"

[dependencies]
pepl-types = { path = "../pepl-types" }
pepl-lexer = { path = "../pepl-lexer" }
pepl-parser = { path = "../pepl-parser" }
pepl-codegen = { path = "../pepl-codegen" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
