[package]
name = "pepl-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PEPL tree-walking evaluator: reference implementation for execution semantics"

[dependencies]
pepl-types = { path = "../pepl-types" }
pepl-parser = { path = "../pepl-parser" }
pepl-stdlib = { path = "../../../pepl-stdlib" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
pepl-lexer = { path = "../pepl-lexer" }
