[package]
name = "pepl-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "PEPL parser: token stream to AST"

[dependencies]
pepl-types = { version = "0.1.0", path = "../pepl-types" }
pepl-lexer = { version = "0.1.0", path = "../pepl-lexer" }
thiserror.workspace = true
